# power-grid-india

./: .gitignore  Dockerfile  README.md  client.py  grid_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
